# KiNaomatics

./: Makefile  NaoJointLims  README
Coaching/: .Coaching.cpp.swp  Coaching.cpp  Makefile  TeamSPL.lua  coach
KiNaoMatics/: .NiSimpleSkeleton.cpp.swp  Makefile  NiSimpleSkeleton  NiSimpleSkeleton.cpp  out
NITE-Bin-Dev-Linux-x86-v1.5.2.21/Documentation/html/: XnV3DVector_8h.html  XnV3DVector_8h_source.html  XnVActivationMessage_8h.html  XnVActivationMessage_8h_source.html  XnVBroadcaster_8h.html  XnVBroadcaster_8h_source.html  XnVCCMessage_8h.html  XnVCCMessage_8h_source.html  XnVCircleDetector_8h.html  XnVCircleDetector_8h_source.html  XnVCircle_8h.html  XnVCircle_8h_source.html  XnVClickableVirtualPlane_8h.html  XnVClickableVirtualPlane_8h_source.html  XnVComplexMessage_8h.html  XnVComplexMessage_8h_source.html  XnVDepthControl_8h.html  XnVDepthControl_8h_source.html  XnVDepthGenerator_8h.html  XnVDepthGenerator_8h_source.html  XnVDepthMessage_8h.html  XnVDepthMessage_8h_source.html  XnVDeviceControl_8h.html  XnVDeviceControl_8h_source.html  XnVDeviceFilter_8h.html  XnVDeviceFilter_8h_source.html  XnVDeviceGenerator_8h.html  XnVDeviceGenerator_8h_source.html  XnVDeviceMessage_8h.html  XnVDeviceMessage_8h_source.html  XnVDirection_8h.html  XnVDirection_8h_source.html  XnVFilter_8h.html  XnVFilter_8h_source.html  XnVFlowRouter_8h.html  XnVFlowRouter_8h_source.html  XnVGesture_8h.html  XnVGesture_8h_source.html  XnVHandPointContext_8h.html  XnVHandPointContext_8h_source.html  (+263 more)
NITE-Bin-Dev-Linux-x86-v1.5.2.21/Samples/: NiteSampleMakefile
NITE-Bin-Dev-Linux-x86-v1.5.2.21/Samples/Boxes.java/: Manifest.txt
NITE-Bin-Dev-Linux-x86-v1.5.2.21/Samples/Boxes/x86-Debug/: main.d
OpenNI/Include/: IXnNodeAllocator.h.gch  XnBaseNode.h.gch  XnCppWrapper.h.gch  XnDataTypes.h.gch  XnEnumerationErrors.h.gch  XnEvent.h.gch  XnFPSCalculator.h.gch  XnHash.h.gch  XnLogTypes.h.gch  XnLogWriterBase.h.gch  XnMacros.h.gch  XnModuleCFunctions.h.gch  XnModuleInterface.h.gch  XnOSStrings.h.gch  XnOpenNI.h.gch  XnProfiling.h.gch  XnQueries.h.gch  XnScheduler.h.gch  XnStack.h.gch  XnStatus.h.gch  XnStatusCodes.h.gch  XnStatusRegister.h.gch  XnStringsHash.h.gch  XnThreadSafeQueue.h.gch
OpenNI/Samples/NiSimpleSkeleton/: JointAngles.cpp  NiSimpleSkeleton  NiSimpleSkeleton.cpp  util.cpp  util.h
OpenNI/Samples/NiUserTracker/: main.cpp
primesensor/: .gitcloned  CMakeLists.txt  sensorkinect-config.cmake
primesensor/Platform/Linux/CreateRedist/Final/: Sensor-Bin-Linux-x86-v5.1.0.25.tar.bz2
primesensor/Platform/Linux/Install/: 55-primesense-usb.rules
primesensor/Platform/Linux/Redist/Sensor-Bin-Linux-x86-v5.1.0.25/: install.sh
primesensor/Platform/Linux/Redist/Sensor-Bin-Linux-x86-v5.1.0.25/Config/: GlobalDefaultsKinect.ini
primesensor/Platform/Linux/Redist/Sensor-Bin-Linux-x86-v5.1.0.25/Install/: blacklist-gspca-kinect.conf
primesensor/Source/XnDDK/: XnDepthStream.cpp
primesensor/Source/XnDeviceSensorV2/: XnSensorClient.cpp
(+910 files in other folders)
